[tool.poetry]
name = "voscord"
version = "0.1.0"
description = ""
authors = ["Alliana <56180684+Allianaab2m@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = { version="2.0.0b1", allow-prereleases=true}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
